Fixed dummy form

--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
     <div id="root"></div>
     
     <script type="module" src="/src/main.tsx"></script>
+    <form name="Contact Form" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="tel" name="phone" />
+      <input type="text" name="interests" />
+      <input type="text" name="bot-field" />
+    </form>
   </body>
 </html>
