favicon and archie updates

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://images.ctfassets.net/472n3jj0rqks/Y1rTEWMnFO24y2hKq4PwL/21157d6a9d46c3d144bd5ef553cba076/white_favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://images.ctfassets.net/472n3jj0rqks/3FCjnLYWEnq7IAy6ntVwn9/dc20f5ffb9a65a752840d433a5f34542/white_favicon_16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://images.ctfassets.net/472n3jj0rqks/7afinsmgFfRGjlixSri7FZ/08a45d7be9cd4a64ce828f785d670ef8/white_favicon_180.png">
     <title>Co-Create Innovation Hub | Coworking & Office Space in Russellville, AR</title>
 
     <meta name="description" content="Discover Co-Create Innovation Hub in downtown Russellville, AR. Offering flexible coworking spaces, private offices, meeting rooms, and event venues designed for innovation and growth in the Arkansas River Valley." />
